<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/text_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <Button
            android:id="@+id/button_start"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_edit_nothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <EditText
            android:id="@+id/edit_nothing"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/nothing"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/layout_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_mobilization"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="24dp"
            android:src="@drawable/image"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_edit_mobilization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_same_pictures"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_one"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="12dp"
            android:src="@drawable/mariusz" />

        <ImageView
            android:id="@+id/image_two"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="12dp"
            android:src="@drawable/mariusz2"/>

        <TextView
            android:id="@+id/text_pictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/the_same_picture"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <Button
            android:id="@+id/button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            style="@style/Widget.AppCompat.Button"/>

        <Button
            android:id="@+id/button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            style="@style/Widget.AppCompat.Button"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_love"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_if_true"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <CheckBox
            android:id="@+id/checkbox_harry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harry"/>

        <CheckBox
            android:id="@+id/checkbox_hulk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hulk"/>

        <CheckBox
            android:id="@+id/checkbox_plowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plowing"/>

        <CheckBox
            android:id="@+id/checkbox_dove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dove"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_funny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_question_fox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/fox_say"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>


        <TextView
            android:id="@+id/text_answer_fox"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/megan"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_funny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/funny"
                style="@style/Widget.AppCompat.Button"/>

            <Button
                android:id="@+id/button_not_funny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/not_funny"
                style="@style/Widget.AppCompat.Button"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/congratulations"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    <Button
        android:id="@+id/button_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:visibility="gone"/>

</RelativeLayout>
